# Feedback-API

./: .env.sample  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  docker-compose2.yml  main.py  pyproject.toml  requirements.txt  testing.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
admin/: controller.py  model.py
auth/: controller.py  deps.py  service.py
core/: settings.py
feedback/: model.py
public/: controller.py
tests/: conftest.py  test_admin.py  test_auth.py  test_public.py  test_user.py
user/: controller.py  model.py  service.py
