[project]
name = "role-based-feedback-collector-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.0",
    "psycopg2>=2.9.10",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
]
